# embedchain-streamlit-app

./: .gitignore  Dockerfile  README.md  docker-compose.yml  hugginface_demo.py  makefile  pyproject.toml  requirements.txt  streamlit_version.py
.github/workflows/: code_quality.yml
whatsapp_demo_app/: whatsapp_chat.txt
