[tool.poetry]
name = "embedchain-streamlit-app"
version = "0.1.0"
description = "A template embedchain Streamlit App with Docker"
authors = ["Amjad Raza","Alonso Isidoro"]
license = "MIT"
readme = "README.md"
packages = [{include = "embedchain-streamlit-app"}]


[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || > 3.9.7,<3.13"
embedchain = "^0.1.102"
streamlit = "^1.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
